--- a/20211023140908-helm.html
+++ b/20211023140908-helm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 02:45 -->
+<!-- 2024-01-19 Fri 12:42 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Helm</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       b9376a33-534c-4468-a788-df96a642a8e2
 </p>
 
-<div id="outline-container-orgd6581de" class="outline-2">
-<h2 id="orgd6581de">What is Helm?</h2>
-<div class="outline-text-2" id="text-orgd6581de">
+<div id="outline-container-orgfcb77b7" class="outline-2">
+<h2 id="orgfcb77b7">What is Helm?</h2>
+<div class="outline-text-2" id="text-orgfcb77b7">
 <p>
 A tool that uses a package manager to create, install and manage applications
 inside a cluster.
@@ -268,9 +268,9 @@ inside a cluster.
 </div>
 </div>
 
-<div id="outline-container-org24918ed" class="outline-2">
-<h2 id="org24918ed">What is a Helm Chart?</h2>
-<div class="outline-text-2" id="text-org24918ed">
+<div id="outline-container-orgc160cb0" class="outline-2">
+<h2 id="orgc160cb0">What is a Helm Chart?</h2>
+<div class="outline-text-2" id="text-orgc160cb0">
 <p>
 A <code>Helm Chart</code> is a package containing files that will be used to deploy
 applications in the cluster. It consists of the following structure:
@@ -293,12 +293,12 @@ A directory consisting of:
 </div>
 </div>
 
-<div id="outline-container-orgc75f260" class="outline-2">
-<h2 id="orgc75f260">Commands</h2>
+<div id="outline-container-orgf5376c9" class="outline-2">
+<h2 id="orgf5376c9">Commands</h2>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
