--- a/20211103110648-kubernetes_storage.html
+++ b/20211103110648-kubernetes_storage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 02:45 -->
+<!-- 2024-01-19 Fri 12:42 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Kubernetes-Storage</title>
@@ -258,13 +258,13 @@ for the JavaScript code in this tag.
 :ID:       1369d5e6-2858-4fc5-b59c-942326890b40
 </p>
 
-<div id="outline-container-orgab353d7" class="outline-2">
-<h2 id="orgab353d7">Volume Types</h2>
-<div class="outline-text-2" id="text-orgab353d7">
+<div id="outline-container-org7732b63" class="outline-2">
+<h2 id="org7732b63">Volume Types</h2>
+<div class="outline-text-2" id="text-org7732b63">
 </div>
-<div id="outline-container-org3022b72" class="outline-3">
-<h3 id="org3022b72">emptyDir</h3>
-<div class="outline-text-3" id="text-org3022b72">
+<div id="outline-container-org680d98c" class="outline-3">
+<h3 id="org680d98c">emptyDir</h3>
+<div class="outline-text-3" id="text-org680d98c">
 <p>
 Empty directory for storing data ephemeral data from the Pods
 </p>
@@ -298,36 +298,36 @@ spec:
 </div>
 </div>
 
-<div id="outline-container-org54e6fe1" class="outline-3">
-<h3 id="org54e6fe1">hostPath</h3>
-<div class="outline-text-3" id="text-org54e6fe1">
+<div id="outline-container-org0344336" class="outline-3">
+<h3 id="org0344336">hostPath</h3>
+<div class="outline-text-3" id="text-org0344336">
 <p>
 A volume that's mounted in the Node's filesystem and is shared with a Pod
 </p>
 </div>
 </div>
 
-<div id="outline-container-orga60f2ab" class="outline-3">
-<h3 id="orga60f2ab">nfs</h3>
-<div class="outline-text-3" id="text-orga60f2ab">
+<div id="outline-container-org98ae8ff" class="outline-3">
+<h3 id="org98ae8ff">nfs</h3>
+<div class="outline-text-3" id="text-org98ae8ff">
 <p>
 A NFS share mounted into the Pod
 </p>
 </div>
 </div>
 
-<div id="outline-container-org4757766" class="outline-3">
-<h3 id="org4757766">configMap/secret</h3>
-<div class="outline-text-3" id="text-org4757766">
+<div id="outline-container-orgcdef7a1" class="outline-3">
+<h3 id="orgcdef7a1">configMap/secret</h3>
+<div class="outline-text-3" id="text-orgcdef7a1">
 <p>
 Provides access to resources
 </p>
 </div>
 </div>
 
-<div id="outline-container-org9cb251e" class="outline-3">
-<h3 id="org9cb251e">persistentVolumeClaim</h3>
-<div class="outline-text-3" id="text-org9cb251e">
+<div id="outline-container-org626b668" class="outline-3">
+<h3 id="org626b668">persistentVolumeClaim</h3>
+<div class="outline-text-3" id="text-org626b668">
 <p>
 A <code>persistentVolume</code> is a cluster-wide storage resource that relies on
 network-attached storage. It's abstracted and associated to a Pod via a
@@ -381,9 +381,9 @@ spec:
 </div>
 
 
-<div id="outline-container-orgeedbab9" class="outline-3">
-<h3 id="orgeedbab9">Cloud</h3>
-<div class="outline-text-3" id="text-orgeedbab9">
+<div id="outline-container-org0e4e973" class="outline-3">
+<h3 id="org0e4e973">Cloud</h3>
+<div class="outline-text-3" id="text-org0e4e973">
 <p>
 Cluster-wide storage, which varies depending on the cloud provider
 </p>
@@ -408,7 +408,7 @@ Cluster-wide storage, which varies depending on the cloud provider
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
