--- a/20211103202637-kubernetes_configmaps.html
+++ b/20211103202637-kubernetes_configmaps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 02:45 -->
+<!-- 2024-01-19 Fri 12:42 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Kubernetes-ConfigMaps</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       c02e9bd0-e9fb-45d0-985a-4bdcbe62b8dc
 </p>
 
-<div id="outline-container-org42678dc" class="outline-2">
-<h2 id="org42678dc">ConfigMaps</h2>
-<div class="outline-text-2" id="text-org42678dc">
+<div id="outline-container-org7876b94" class="outline-2">
+<h2 id="org7876b94">ConfigMaps</h2>
+<div class="outline-text-2" id="text-org7876b94">
 <p>
 A ConfigMap is a API object used to store non-confidential data in
 key-value pairs. Pods can consume ConfigMaps as environment variables,
@@ -291,9 +291,9 @@ data:
 </div>
 </div>
 
-<div id="outline-container-org21bfa58" class="outline-3">
-<h3 id="org21bfa58">Creating a ConfigMap</h3>
-<div class="outline-text-3" id="text-org21bfa58">
+<div id="outline-container-orgfae752f" class="outline-3">
+<h3 id="orgfae752f">Creating a ConfigMap</h3>
+<div class="outline-text-3" id="text-orgfae752f">
 <ul class="org-ul">
 <li>From files</li>
 </ul>
@@ -315,9 +315,9 @@ data:
 </div>
 
 
-<div id="outline-container-org066d3b8" class="outline-3">
-<h3 id="org066d3b8">Using ConfigMaps in Pods</h3>
-<div class="outline-text-3" id="text-org066d3b8">
+<div id="outline-container-org2ff6c73" class="outline-3">
+<h3 id="org2ff6c73">Using ConfigMaps in Pods</h3>
+<div class="outline-text-3" id="text-org2ff6c73">
 <div class="org-src-container">
 <pre class="src src-yaml">apiVersion: v1
 kind: Pod
@@ -364,7 +364,7 @@ spec:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
