--- a/20211107141903-the_effective_manager.html
+++ b/20211107141903-the_effective_manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 02:45 -->
+<!-- 2024-01-19 Fri 12:42 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>The-Effective-Manager</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       32b2fe5a-3bc3-439b-a850-70a539498e9e
 </p>
 
-<div id="outline-container-orgc0cea3f" class="outline-2">
-<h2 id="orgc0cea3f">Teachable and Sustainable Skills</h2>
-<div class="outline-text-2" id="text-orgc0cea3f">
+<div id="outline-container-org4665dbb" class="outline-2">
+<h2 id="org4665dbb">Teachable and Sustainable Skills</h2>
+<div class="outline-text-2" id="text-org4665dbb">
 <blockquote>
 <p>
 However you manage, your techniques, behavior, and philosophy must be both
@@ -320,9 +320,9 @@ others. And the effective manager can repeat the
 </div>
 </div>
 
-<div id="outline-container-orga3f015b" class="outline-2">
-<h2 id="orga3f015b">Know Your People: One On Ones</h2>
-<div class="outline-text-2" id="text-orga3f015b">
+<div id="outline-container-orgb6735af" class="outline-2">
+<h2 id="orgb6735af">Know Your People: One On Ones</h2>
+<div class="outline-text-2" id="text-orgb6735af">
 <p>
 One on ones are meetings that:
 </p>
@@ -337,9 +337,9 @@ One on ones are meetings that:
 </ol>
 </div>
 
-<div id="outline-container-orge12b24c" class="outline-3">
-<h3 id="orge12b24c">Scheduling</h3>
-<div class="outline-text-3" id="text-orge12b24c">
+<div id="outline-container-org3de5d7a" class="outline-3">
+<h3 id="org3de5d7a">Scheduling</h3>
+<div class="outline-text-3" id="text-org3de5d7a">
 <blockquote>
 <p>
 Scheduling your O3s is actually more important than having them weekly. That's
@@ -378,9 +378,9 @@ manager: your time. Build an organization of effective managers
 </div>
 </div>
 
-<div id="outline-container-orgde2007f" class="outline-2">
-<h2 id="orgde2007f">Talk about performance - Feedback</h2>
-<div class="outline-text-2" id="text-orgde2007f">
+<div id="outline-container-org554e43c" class="outline-2">
+<h2 id="org554e43c">Talk about performance - Feedback</h2>
+<div class="outline-text-2" id="text-org554e43c">
 <blockquote>
 <p>
 The second critical manager behavior that leads to results and retention is
@@ -406,9 +406,9 @@ Their defensiveness, then, should not be surprising.
 </blockquote>
 </div>
 
-<div id="outline-container-org071842d" class="outline-3">
-<h3 id="org071842d">Encourage Effective Future Behavior</h3>
-<div class="outline-text-3" id="text-org071842d">
+<div id="outline-container-orgeeaffe7" class="outline-3">
+<h3 id="orgeeaffe7">Encourage Effective Future Behavior</h3>
+<div class="outline-text-3" id="text-orgeeaffe7">
 <blockquote>
 <p>
 The moment you switch to a future focus, however, you free yourself up to focus
@@ -503,9 +503,9 @@ forgiven it. Remember that our focus is on the future, not the past</b>.
 </div>
 </div>
 
-<div id="outline-container-orgd3a7c0d" class="outline-3">
-<h3 id="orgd3a7c0d">When should I give feedback</h3>
-<div class="outline-text-3" id="text-orgd3a7c0d">
+<div id="outline-container-org8b67ac3" class="outline-3">
+<h3 id="org8b67ac3">When should I give feedback</h3>
+<div class="outline-text-3" id="text-org8b67ac3">
 <p>
 Feedbacks should be given as early and often as possible, if you can give
 feedback right after noticing positive/negative behaviour that's ideal, of
@@ -529,21 +529,21 @@ like attention.</li>
 </div>
 </div>
 
-<div id="outline-container-org8387c8e" class="outline-2">
-<h2 id="org8387c8e">Common Questions and Resistance to Feedback</h2>
-<div class="outline-text-2" id="text-org8387c8e">
+<div id="outline-container-org3b91492" class="outline-2">
+<h2 id="org3b91492">Common Questions and Resistance to Feedback</h2>
+<div class="outline-text-2" id="text-org3b91492">
 <p>
 First, ask yourself these three questions before offering feedback.
 </p>
 </div>
 
-<div id="outline-container-orgb3b63b2" class="outline-3">
-<h3 id="orgb3b63b2">The questions</h3>
-<div class="outline-text-3" id="text-orgb3b63b2">
+<div id="outline-container-orgaceb3f0" class="outline-3">
+<h3 id="orgaceb3f0">The questions</h3>
+<div class="outline-text-3" id="text-orgaceb3f0">
 </div>
-<div id="outline-container-orgfb2c72b" class="outline-4">
-<h4 id="orgfb2c72b">Am I angry?</h4>
-<div class="outline-text-4" id="text-orgfb2c72b">
+<div id="outline-container-org7e26604" class="outline-4">
+<h4 id="org7e26604">Am I angry?</h4>
+<div class="outline-text-4" id="text-org7e26604">
 <blockquote>
 <p>
 If you're angry, don't give feedback. Period.
@@ -552,18 +552,18 @@ If you're angry, don't give feedback. Period.
 </div>
 </div>
 
-<div id="outline-container-orga568f1f" class="outline-4">
-<h4 id="orga568f1f">Do I want to remind or punish?</h4>
-<div class="outline-text-4" id="text-orga568f1f">
+<div id="outline-container-orgf9c8c50" class="outline-4">
+<h4 id="orgf9c8c50">Do I want to remind or punish?</h4>
+<div class="outline-text-4" id="text-orgf9c8c50">
 <p>
 Always focus in encouraging effective future behavior.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org8e4e0dd" class="outline-4">
-<h4 id="org8e4e0dd">Can I let it go?</h4>
-<div class="outline-text-4" id="text-org8e4e0dd">
+<div id="outline-container-org55450c7" class="outline-4">
+<h4 id="org55450c7">Can I let it go?</h4>
+<div class="outline-text-4" id="text-org55450c7">
 <blockquote>
 <p>
 If you can't let it go in terms of how you feel, we recommend that you do let it
@@ -573,9 +573,9 @@ go by not giving negative feedback.
 </div>
 </div>
 
-<div id="outline-container-org3d1c5bc" class="outline-4">
-<h4 id="org3d1c5bc">Maybe delay or defer?</h4>
-<div class="outline-text-4" id="text-org3d1c5bc">
+<div id="outline-container-orgc513d58" class="outline-4">
+<h4 id="orgc513d58">Maybe delay or defer?</h4>
+<div class="outline-text-4" id="text-orgc513d58">
 <p>
 If you can't pass the three tests above, you should either <b>delay</b> or <b>defer</b>.
 </p>
@@ -590,9 +590,9 @@ again.</li>
 </div>
 </div>
 
-<div id="outline-container-org37b7620" class="outline-4">
-<h4 id="org37b7620">The Shot across the Bow</h4>
-<div class="outline-text-4" id="text-org37b7620">
+<div id="outline-container-org249a583" class="outline-4">
+<h4 id="org249a583">The Shot across the Bow</h4>
+<div class="outline-text-4" id="text-org249a583">
 <p>
 What do I do if one of my directs pushes back or refuses feedback? If your
 direct is defensive it means they likely know they're in the wrong. Do not drag
@@ -609,9 +609,9 @@ apologize, and walk away. You've made your point.
 </div>
 </div>
 
-<div id="outline-container-orgf252e52" class="outline-3">
-<h3 id="orgf252e52">The capstone: systemic feedback</h3>
-<div class="outline-text-3" id="text-orgf252e52">
+<div id="outline-container-org29426a5" class="outline-3">
+<h3 id="org29426a5">The capstone: systemic feedback</h3>
+<div class="outline-text-3" id="text-org29426a5">
 <blockquote>
 <p>
 Systemic feedback changes what you are talking to your direct about and raises
@@ -634,9 +634,9 @@ don't keep.
 </blockquote>
 </div>
 
-<div id="outline-container-org317606f" class="outline-4">
-<h4 id="org317606f">When to use it?</h4>
-<div class="outline-text-4" id="text-org317606f">
+<div id="outline-container-org4034d92" class="outline-4">
+<h4 id="org4034d92">When to use it?</h4>
+<div class="outline-text-4" id="text-org4034d92">
 <blockquote>
 <p>
 You should use systemic feedback when you have already given six instances of
@@ -647,18 +647,18 @@ has not been engaging in the behavior they've committed to.
 </div>
 </div>
 
-<div id="outline-container-orgcf27d8d" class="outline-4">
-<h4 id="orgcf27d8d">How is it different?</h4>
-<div class="outline-text-4" id="text-orgcf27d8d">
+<div id="outline-container-org40fb72a" class="outline-4">
+<h4 id="org40fb72a">How is it different?</h4>
+<div class="outline-text-4" id="text-org40fb72a">
 <p>
 In systemic feedbacks you're giving feedback on <b>the failure to meet commitments</b>.
 </p>
 </div>
 </div>
 
-<div id="outline-container-orga0c31c8" class="outline-4">
-<h4 id="orga0c31c8">Two dangers</h4>
-<div class="outline-text-4" id="text-orga0c31c8">
+<div id="outline-container-org88b6d44" class="outline-4">
+<h4 id="org88b6d44">Two dangers</h4>
+<div class="outline-text-4" id="text-org88b6d44">
 <ol class="org-ol">
 <li>Use the standard feedback model before applying the systemic feedback</li>
 <li>Implied sanctions must be delivered</li>
@@ -668,13 +668,13 @@ In systemic feedbacks you're giving feedback on <b>the failure to meet commitmen
 </div>
 </div>
 
-<div id="outline-container-org496001e" class="outline-2">
-<h2 id="org496001e">How to start giving feedback</h2>
-<div class="outline-text-2" id="text-org496001e">
+<div id="outline-container-org6211a88" class="outline-2">
+<h2 id="org6211a88">How to start giving feedback</h2>
+<div class="outline-text-2" id="text-org6211a88">
 </div>
-<div id="outline-container-orgfc051ce" class="outline-3">
-<h3 id="orgfc051ce">Announce your intention in your weekly staff meeting</h3>
-<div class="outline-text-3" id="text-orgfc051ce">
+<div id="outline-container-org2a2f8e2" class="outline-3">
+<h3 id="org2a2f8e2">Announce your intention in your weekly staff meeting</h3>
+<div class="outline-text-3" id="text-org2a2f8e2">
 <blockquote>
 <p>
 Cover the purpose of feedback talk to your directs about the purpose of giving
@@ -689,9 +689,9 @@ feedback model</li>
 </div>
 </div>
 
-<div id="outline-container-org68fe0a0" class="outline-3">
-<h3 id="org68fe0a0">Give only positive feedback for eigth weeks</h3>
-<div class="outline-text-3" id="text-org68fe0a0">
+<div id="outline-container-org2f6d2f1" class="outline-3">
+<h3 id="org2f6d2f1">Give only positive feedback for eigth weeks</h3>
+<div class="outline-text-3" id="text-org2f6d2f1">
 <blockquote>
 <p>
 Don't give any negative feedback as you're learning to use the feedback
@@ -708,9 +708,9 @@ hurt the feelings of your direct.
 </div>
 </div>
 
-<div id="outline-container-org86a2c0b" class="outline-3">
-<h3 id="org86a2c0b">Stay as positive as you can</h3>
-<div class="outline-text-3" id="text-org86a2c0b">
+<div id="outline-container-org301d4bc" class="outline-3">
+<h3 id="org301d4bc">Stay as positive as you can</h3>
+<div class="outline-text-3" id="text-org301d4bc">
 <ul class="org-ul">
 <li>Don't overdo negative feedbacks</li>
 <li>Positive feedbacks are much more powerful tools than negative ones</li>
@@ -727,9 +727,9 @@ all the good behaviors.
 </div>
 </div>
 
-<div id="outline-container-orgf741363" class="outline-2">
-<h2 id="orgf741363">Push work down - Delegation</h2>
-<div class="outline-text-2" id="text-orgf741363">
+<div id="outline-container-org552b1a2" class="outline-2">
+<h2 id="org552b1a2">Push work down - Delegation</h2>
+<div class="outline-text-2" id="text-org552b1a2">
 <blockquote>
 <p>
 Learning to delegate is part of the transition to becoming an executive. Too
@@ -744,9 +744,9 @@ How do we know when something is a task assignment and not a delegation?
 </p>
 </div>
 
-<div id="outline-container-org484125c" class="outline-4">
-<h4 id="org484125c">Task assignment x Task delegation</h4>
-<div class="outline-text-4" id="text-org484125c">
+<div id="outline-container-org100d3a5" class="outline-4">
+<h4 id="org100d3a5">Task assignment x Task delegation</h4>
+<div class="outline-text-4" id="text-org100d3a5">
 <blockquote>
 <p>
 Delegation, on the other hand, is you turning over responsibility for one of
@@ -757,13 +757,13 @@ long standing basis, to one of your directs.
 </div>
 </div>
 
-<div id="outline-container-org2fb8c5a" class="outline-4">
-<h4 id="org2fb8c5a">Why Delegation Is the Solution - The Delegation</h4>
+<div id="outline-container-orgbaedfea" class="outline-4">
+<h4 id="orgbaedfea">Why Delegation Is the Solution - The Delegation</h4>
 </div>
 
-<div id="outline-container-org709e9ef" class="outline-4">
-<h4 id="org709e9ef">Delegate the Big Black Ball</h4>
-<div class="outline-text-4" id="text-org709e9ef">
+<div id="outline-container-orgdc85181" class="outline-4">
+<h4 id="orgdc85181">Delegate the Big Black Ball</h4>
+<div class="outline-text-4" id="text-orgdc85181">
 <ul class="org-ul">
 <li>Not a good idea, since you <b>don't</b> know how to do it, how are you going to
 help your directs to do it?</li>
@@ -779,9 +779,9 @@ your directs. Learn it first, master it, before
 </div>
 </div>
 
-<div id="outline-container-org64e7267" class="outline-4">
-<h4 id="org64e7267">Delegate One of the Big Gray Balls</h4>
-<div class="outline-text-4" id="text-org64e7267">
+<div id="outline-container-orgd7217a1" class="outline-4">
+<h4 id="orgd7217a1">Delegate One of the Big Gray Balls</h4>
+<div class="outline-text-4" id="text-orgd7217a1">
 <blockquote>
 <p>
 One of your small balls is a big ball to your direct.
@@ -795,13 +795,13 @@ task anyway.</li>
 </div>
 </div>
 
-<div id="outline-container-orgb0483af" class="outline-4">
-<h4 id="orgb0483af">Delegate One or More of the Small Balls</h4>
+<div id="outline-container-org35aa744" class="outline-4">
+<h4 id="org35aa744">Delegate One or More of the Small Balls</h4>
 </div>
 
-<div id="outline-container-org1b6bcbb" class="outline-3">
-<h3 id="org1b6bcbb">How to Delegate—The Manager Tools Delegation Model</h3>
-<div class="outline-text-3" id="text-org1b6bcbb">
+<div id="outline-container-org01979d7" class="outline-3">
+<h3 id="org01979d7">How to Delegate—The Manager Tools Delegation Model</h3>
+<div class="outline-text-3" id="text-org01979d7">
 <ol class="org-ol">
 <li>State your desire for help</li>
 <li>Tell them why you're asking them</li>
@@ -814,7 +814,7 @@ task anyway.</li>
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
