--- a/20211108165331-kubernetes_secrets.html
+++ b/20211108165331-kubernetes_secrets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 02:45 -->
+<!-- 2024-01-19 Fri 12:42 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Kubernetes-Secrets</title>
@@ -266,9 +266,9 @@ don't need to include confidential data in your application code.
 </p>
 </blockquote>
 
-<div id="outline-container-org44cfbb3" class="outline-2">
-<h2 id="org44cfbb3">YAML</h2>
-<div class="outline-text-2" id="text-org44cfbb3">
+<div id="outline-container-orgce7104d" class="outline-2">
+<h2 id="orgce7104d">YAML</h2>
+<div class="outline-text-2" id="text-orgce7104d">
 <div class="org-src-container">
 <pre class="src src-yaml">apiVersion: v1
 kind: Secret
@@ -283,9 +283,9 @@ data:
 </div>
 </div>
 
-<div id="outline-container-org0a63d66" class="outline-2">
-<h2 id="org0a63d66">Accessing a secret</h2>
-<div class="outline-text-2" id="text-org0a63d66">
+<div id="outline-container-orgc55772d" class="outline-2">
+<h2 id="orgc55772d">Accessing a secret</h2>
+<div class="outline-text-2" id="text-orgc55772d">
 <ul class="org-ul">
 <li>As an environment variable</li>
 </ul>
@@ -335,7 +335,7 @@ spec:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
