--- a/20211013230422-kubectl.html
+++ b/20211013230422-kubectl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 02:45 -->
+<!-- 2024-01-19 Fri 12:42 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>kubectl</title>
@@ -258,9 +258,9 @@ for the JavaScript code in this tag.
 :ID:       ee377537-0c8d-48c9-a181-19a2cff8c4a7
 </p>
 
-<div id="outline-container-orgd4da1b1" class="outline-2">
-<h2 id="orgd4da1b1">Commands</h2>
-<div class="outline-text-2" id="text-orgd4da1b1">
+<div id="outline-container-orgdc6dd9b" class="outline-2">
+<h2 id="orgdc6dd9b">Commands</h2>
+<div class="outline-text-2" id="text-orgdc6dd9b">
 <ul class="org-ul">
 <li>View cluster information</li>
 </ul>
@@ -270,9 +270,9 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org965ea0f" class="outline-3">
-<h3 id="org965ea0f">Apply &amp; Create</h3>
-<div class="outline-text-3" id="text-org965ea0f">
+<div id="outline-container-org8286388" class="outline-3">
+<h3 id="org8286388">Apply &amp; Create</h3>
+<div class="outline-text-3" id="text-org8286388">
 <ul class="org-ul">
 <li>Just creates a resource</li>
 </ul>
@@ -293,9 +293,9 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgee37b48" class="outline-3">
-<h3 id="orgee37b48">Delete</h3>
-<div class="outline-text-3" id="text-orgee37b48">
+<div id="outline-container-org76e61fa" class="outline-3">
+<h3 id="org76e61fa">Delete</h3>
+<div class="outline-text-3" id="text-org76e61fa">
 <p>
 Deleting a pod won't prevent it from being recreated.
 </p>
@@ -313,9 +313,9 @@ you need to delete it's <code>deployment</code>.
 </div>
 </div>
 
-<div id="outline-container-org62b715d" class="outline-3">
-<h3 id="org62b715d">Describe</h3>
-<div class="outline-text-3" id="text-org62b715d">
+<div id="outline-container-orgacae64d" class="outline-3">
+<h3 id="orgacae64d">Describe</h3>
+<div class="outline-text-3" id="text-orgacae64d">
 <div class="org-src-container">
 <pre class="src src-shell">kubectl describe pods &lt;...&gt;
 </pre>
@@ -323,9 +323,9 @@ you need to delete it's <code>deployment</code>.
 </div>
 </div>
 
-<div id="outline-container-orgc38f0c7" class="outline-3">
-<h3 id="orgc38f0c7">Get</h3>
-<div class="outline-text-3" id="text-orgc38f0c7">
+<div id="outline-container-org5a3a344" class="outline-3">
+<h3 id="org5a3a344">Get</h3>
+<div class="outline-text-3" id="text-org5a3a344">
 <ul class="org-ul">
 <li>View all the resources</li>
 </ul>
@@ -356,9 +356,9 @@ kubectl get deployment -l app=nginx
 </div>
 </div>
 
-<div id="outline-container-org7685840" class="outline-3">
-<h3 id="org7685840">Port-forward</h3>
-<div class="outline-text-3" id="text-org7685840">
+<div id="outline-container-org9d92110" class="outline-3">
+<h3 id="org9d92110">Port-forward</h3>
+<div class="outline-text-3" id="text-org9d92110">
 <ul class="org-ul">
 <li>Forward port to enables external calls</li>
 </ul>
@@ -372,13 +372,13 @@ kubectl port-forward [pod-name] 8080:80
 </div>
 </div>
 
-<div id="outline-container-orgdcf33a8" class="outline-2">
-<h2 id="orgdcf33a8">YAML</h2>
-<div class="outline-text-2" id="text-orgdcf33a8">
+<div id="outline-container-org1864614" class="outline-2">
+<h2 id="org1864614">YAML</h2>
+<div class="outline-text-2" id="text-org1864614">
 </div>
-<div id="outline-container-orgcfc36b9" class="outline-3">
-<h3 id="orgcfc36b9">Pod</h3>
-<div class="outline-text-3" id="text-orgcfc36b9">
+<div id="outline-container-orgfd937b7" class="outline-3">
+<h3 id="orgfd937b7">Pod</h3>
+<div class="outline-text-3" id="text-orgfd937b7">
 <div class="org-src-container">
 <pre class="src src-yaml">apiVersion: v1
 kind: Pod
@@ -397,9 +397,9 @@ spec:
 </div>
 </div>
 
-<div id="outline-container-org01ee0ed" class="outline-4">
-<h4 id="org01ee0ed">Pod Healthchecks</h4>
-<div class="outline-text-4" id="text-org01ee0ed">
+<div id="outline-container-org70e6cb2" class="outline-4">
+<h4 id="org70e6cb2">Pod Healthchecks</h4>
+<div class="outline-text-4" id="text-org70e6cb2">
 <ul class="org-ul">
 <li>Probe Types
 <ul class="org-ul">
@@ -457,7 +457,7 @@ spec:
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
