--- a/20211104221056-history_of_logic.html
+++ b/20211104221056-history_of_logic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-19 Fri 02:45 -->
+<!-- 2024-01-19 Fri 12:42 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>History-of-Logic</title>
@@ -261,9 +261,9 @@ for the JavaScript code in this tag.
 Notes from the book "History of Logic: from Aristotle to Tarski".
 </p>
 
-<div id="outline-container-org1659def" class="outline-2">
-<h2 id="org1659def">Intro</h2>
-<div class="outline-text-2" id="text-org1659def">
+<div id="outline-container-orgdba06f7" class="outline-2">
+<h2 id="orgdba06f7">Intro</h2>
+<div class="outline-text-2" id="text-orgdba06f7">
 <p>
 Roughly speaking, the development of logic in Europe has had three "golden
 ages":
@@ -280,9 +280,9 @@ ages":
 </ul>
 </div>
 
-<div id="outline-container-orgf91739d" class="outline-3">
-<h3 id="orgf91739d">The Greek period</h3>
-<div class="outline-text-3" id="text-orgf91739d">
+<div id="outline-container-org6d12740" class="outline-3">
+<h3 id="org6d12740">The Greek period</h3>
+<div class="outline-text-3" id="text-org6d12740">
 <p>
 From the beginning of the Greek golden period we get many anticipations of later
 developments. From Aristotle we get a wonderfully worked out system of
@@ -308,9 +308,9 @@ consequence of holding back logical progress.
 </div>
 </div>
 
-<div id="outline-container-org2b3c732" class="outline-3">
-<h3 id="org2b3c732">The medieval period</h3>
-<div class="outline-text-3" id="text-org2b3c732">
+<div id="outline-container-org1a98ee6" class="outline-3">
+<h3 id="org1a98ee6">The medieval period</h3>
+<div class="outline-text-3" id="text-org1a98ee6">
 <p>
 While learning in the West declined, the study of logic was kept alive in the 
 thriving Islamic world under the Abbasid Caliphate, reaching great heights of
@@ -351,9 +351,9 @@ Lisa Jardine 1982 : 805
 </div>
 </div>
 
-<div id="outline-container-orgec4e08a" class="outline-3">
-<h3 id="orgec4e08a">The birth of Calculus</h3>
-<div class="outline-text-3" id="text-orgec4e08a">
+<div id="outline-container-org1751390" class="outline-3">
+<h3 id="org1751390">The birth of Calculus</h3>
+<div class="outline-text-3" id="text-org1751390">
 <p>
 While the study of pure logic may have declined in the early scientific period,
 there were a great many advances in mathematics, in particular in algebra and
@@ -397,9 +397,9 @@ envisaged.
 </div>
 </div>
 
-<div id="outline-container-org020a529" class="outline-3">
-<h3 id="org020a529">The modern era</h3>
-<div class="outline-text-3" id="text-org020a529">
+<div id="outline-container-orge88cd5a" class="outline-3">
+<h3 id="orge88cd5a">The modern era</h3>
+<div class="outline-text-3" id="text-orge88cd5a">
 <ul class="org-ul">
 <li>George Boole: Inspired by Aristotle and Leibniz, Boole managed to encode
 logical statements in a algebraic manner.</li>
@@ -463,7 +463,7 @@ Skolem’s work from the early 1920s, but this was not understood until later.
 </div>
 </div>
 <div id="postamble" class="status">
-<div class="footer"> Last updated 2024-01-19 Fri 02:45.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
+<div class="footer"> Last updated 2024-01-19 Fri 12:41.<br> Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.1 (<a href="https://orgmode.org">Org</a> mode 9.3). Source code availiable <a href="https://github.com/mtrsk/mtrsk.github.io">Here</a>.</div>
 </div>
 </body>
 </html>
